--- a/roles/grafana/tasks/play_manage_grafana.yaml
+++ b/roles/grafana/tasks/play_manage_grafana.yaml
@@ -19,29 +19,29 @@
     owner: grafana
   loop:
     - /metal/grafana
-    - /metal/grafana/bin
-    - /metal/grafana/config
+    # - /metal/grafana/bin
+    # - /metal/grafana/config
     - /metal/grafana/run
-    - /metal/grafana/data
+    # - /metal/grafana/data
 
 - name: grafana_install_binary
   become: yes
   become_method: sudo
   unarchive:
     src: http://ipxe.dlott.casa/util/grafana-{{ grafana_version }}.linux-amd64.tar.gz
-    dest: /metal/grafana/bin/
+    dest: /metal/grafana/
     mode: 0755
     owner: grafana
     group: grafana
     remote_src: true
-    creates: /metal/grafana/bin/grafana-{{ grafana_version }}/VERSION
+    creates: /metal/grafana/grafana-v{{ grafana_version }}/VERSION
 
 # Figure out this Grafana path / requireing bin / public stuff.
 - name: grafana_dir_harness_bin_grafana_data
   become: yes
   become_method: sudo
   file:
-    path: /metal/grafana/bin/grafana-{{ grafana_version }}/
+    path: /metal/grafana/grafana-v{{ grafana_version }}/
     state: directory
     mode: 0755
     owner: grafana
@@ -53,7 +53,7 @@
   become_method: sudo
   template:
     src: templates/grafana_conf.ini.j2
-    dest: /metal/grafana/config/grafana_conf.ini
+    dest: /metal/grafana/grafana-v{{ grafana_version }}/grafana_conf.ini
     owner: grafana
   register: grafana_template_config_output
 
@@ -93,3 +93,28 @@
     port: 3000
     rule: allow
     state: reloaded
+
+- name: grafana_add_prometheus_datasource
+  community.grafana.grafana_datasource:
+    name: Prometheus
+    ds_type: prometheus
+    ds_url: "http://localhost:9090"
+    org_id: "1"
+    tls_skip_verify: true
+    grafana_url: "http://localhost:3000"
+    grafana_user: "metaladmin"
+    grafana_password: "{{ inventory_hostname }}"
+
+# - name: Import Grafana dashboard zabbix
+  # community.grafana.grafana_dashboard:
+  ###community.grafana.grafana_dashboard:
+    # grafana_url: "http://localhost:3000"
+    # grafana_user: "metaladmin"
+    # grafana_password: "{{ inventory_hostname }}"
+    # dashboard_id: 1860
+    # overwrite: true
+    ###folder: Dashboards
+    # dashboard_revision: 33
+  # loop:
+    # - 1860
+    # - 15172
